# monos

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Agents.md  CHANGES.md  CONTRIBUTING.md  FRONTMATTER.md  LICENSE  Makefile  README.md  SETUP_SUMMARY.md  check_links.py  format_notes.py  new_note.py  package-lock.json  package.json  pyproject.toml  setup.bat  setup.py  setup.sh
.data/: notes.db
.github/workflows/: desktop-build.yml  pages.yml
.scripts/: README.md  add_frontmatter.py  check_links.py  enhance_articles.py  improve_articles.py  new_note.py
.tui/: FEATURES.md  README.md  __init__.py  app.py  cli.py  models.py  widgets.py
01_Work/EORA/: Пресс-релиз.md  Тезисы.md
01_Work/NSTU/: 16-01-2026.md  КП_Форпост_Этап1_RAG_Техподдержка.txt  Опросник для встречи с заказчиком.md  Разбор документов.md
01_Работа/Research_DPI/: Deep Packet Inspection. Введение.md
02_Projects_and_Education/Pet_Projects/: MediaSquash.md
02_Projects_and_Education/Wife_Study/: Магистратуры по профилю «Модельер-конструктор» в Астане и Алматы.md
03_Tech_Knowledge/Copilot/: Emojify.md  Generate glossary.md  Make shorter.md  Rewrite as tweet thread.md  Rewrite as tweet.md  (+1 more)
docs/: ARCHITECTURE.md  Agents.md  CHANGES.md  CONTRIBUTING.md  FRONTMATTER.md  IMPROVEMENTS_SUMMARY.md  PUBLISHING.md  SETUP_SUMMARY.md
electron/: main.cjs
notes/: заметка.md
scripts/: capture-site-screenshots.mjs  check-backend.mjs  create-public-snapshot.mjs  generate-app-icons.mjs
site/: index.html
webui/: Makefile  QUICKSTART.md  README.md  START.md  docker-compose.yml  run.sh
(+343 files in other folders)
